--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "dotenv": "^16.5.0",
     "moment": "^2.30.1",
     "moment-duration-format": "^2.3.2",
+    "ms": "^2.1.3",
     "node-schedule": "^2.1.1",
+    "uuid": "^11.1.0",
     "ytdl-core": "^4.11.5"
   }
 }
